migrated Quote app files functioning successfully, ready for Firebase integration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "Peter Choi",
 	"license": "ISC",
 	"dependencies": {
+		"jquery": "^3.4.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1"
 	},
@@ -17,6 +18,7 @@
 		"@babel/core": "^7.9.0",
 		"@babel/preset-env": "^7.9.5",
 		"@babel/preset-react": "^7.9.4",
-		"parcel-bundler": "^1.12.4"
+		"parcel-bundler": "^1.12.4",
+		"sass": "^1.26.3"
 	}
 }
