--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.html",
 	"scripts": {
 		"start": "parcel src/index.html --open",
-		"build": "parcel build src/index.html --out-dir dist"
+		"build": "parcel build src/index.html --out-dir dist --public-url ./"
 	},
 	"author": "Peter Choi",
 	"license": "ISC",
