first pass screenshot functionality working

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"author": "Peter Choi",
 	"license": "ISC",
 	"dependencies": {
-		"jquery": "^3.4.1",
+		"html2canvas": "^1.0.0-rc.5",
+		"jquery": "^3.5.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1"
 	},
